--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semistandard",
+  "name": "ostandard",
   "description": "",
   "version": "0.0.1",
   "author": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "eslint": "~3.15.0",
+    "eslint-config-ostandard": "^0.0.1",
     "eslint-plugin-promise": "~3.4.0",
     "eslint-plugin-react": "~6.9.0",
     "eslint-plugin-standard": "~2.0.1",
