--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ostandard",
   "description": "",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": {
     "email": "othree@gmail.com",
     "name": "othree",
@@ -14,12 +14,12 @@
     "url": "https://github.com/othree/ostandard/issues"
   },
   "dependencies": {
-    "eslint": "~3.15.0",
+    "eslint": "~3.16.1",
     "eslint-config-ostandard": "^0.0.2",
-    "eslint-plugin-promise": "~3.4.0",
-    "eslint-plugin-react": "~6.9.0",
-    "eslint-plugin-standard": "~2.0.1",
-    "standard-engine": "~5.4.0"
+    "standard-engine": "~6.0.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.9.0"
   },
   "devDependencies": {
     "merge": "^1.2.0",
