--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ostandard",
   "description": "",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "author": {
     "email": "othree@gmail.com",
     "name": "othree",
@@ -16,10 +16,11 @@
   "dependencies": {
     "eslint": "~3.16.1",
     "eslint-config-ostandard": "^0.0.6",
-    "standard-engine": "~6.0.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
+    "minimist": "^1.2.0",
+    "standard-engine": "~6.0.0"
   },
   "devDependencies": {
     "merge": "^1.2.0",
